# kchat

./: README.md  pyproject.toml
src/kchat/: kafka.producer.py
src/kchat/kafka/: .cchat.py.swp  .pchat.py.swp  cchat.py  consumer.py  multichat.py  pchat.py  producer.py
